# devcontainer-library

./: README.md
go/golang-1.22/: README.md  go.mod
go/golang-1.22/.devcontainer/: Dockerfile  devcontainer.json  postStartCommand.sh
go/golang-1.22/src/: main.go
go/golang-1.22/testing/: fizzbuzz_test.go
java/java-17/: .gitignore  README.md  settings.gradle
java/java-17/.devcontainer/: Dockerfile  devcontainer.json  postStartCommand.sh
java/java-17/app/: build.gradle
python/python3.11/: README.md  pyproject.toml
python/python3.11/.devcontainer/: Dockerfile  devcontainer.json  postStartCommand.sh
python/python3.11/tests/: test_sample.py
python/python3.12/: README.md  pyproject.toml
python/python3.12-tk/: README.md  pyproject.toml
python/python3.12-tk/.devcontainer/: Dockerfile  devcontainer.json
python/python3.12/.devcontainer/: Dockerfile  devcontainer.json
python/python3.12/src/: sample.py
tools/aws-toolkit/: README.md  package.json
tools/aws-toolkit/.devcontainer/: Dockerfile  devcontainer.json  postStartCommand.sh
tools/azure-toolkit/: README.md  main.tf  package-lock.json  package.json
tools/azure-toolkit/.devcontainer/: Dockerfile  devcontainer.json  postStartCommand.sh
tools/terraform/terraform1.5.0/: README.md  TERRAFORM.md  package.json
typescript/react-storybook/: .eslintrc.js  .gitignore  .npmrc  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
typescript/react-storybook/.devcontainer/: Dockerfile  devcontainer.json  postStartCommand.sh
typescript/react-storybook/.storybook/: main.js  preview.js
(+13 files in other folders)
