[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11.6"
pytest = "^7.2.0"
black = "^22.10.0"
pyproject-flake8 = "^5.0.4.post1"
mypy = "^1.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
requests-mock = "^1.11.0"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = "E203,W503,W504"

[tool.pytest.ini_options]
testpaths = ["tests",]