[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytk = "^0.0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-mock = "^3.12.0"
requests-mock = "^1.11.0"
black = "^24.2.0"
pyproject-flake8 = "^6.1.0"
mypy = "^1.8.0"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = "E203,W503,W504"

[tool.pytest.ini_options]
testpaths = ["tests",]